# Univac-Aegis-bridge

./: ACTUATE.CMS  CMakeLists.txt  CommandDownlink.idl  Dockerfile  EXPORT_CONTROL.md  README.md  RheinmetallPathMapping.hpp  TeletankDefinitiveMapping.hpp  USER_QOS_PROFILES.xml  Waterproof_Univac_Aegis_Bridge.md  aegis_kinematics.hpp  bridge_execution_engine.py  buffered_tactical_console.py  config_linked_console.py  docker-compose.yml  downlink_driver.cpp  dtic_stress_test.py  hydro_coordinated_predictor.py  index.js  requirements.txt  univac-framework.js
docs/: Univac_Aegis_Bridge.md  Univac_nodes.md  api.md  firewatch_ingestion_bridge.md  protocols.md
src/: main.py
src  /control_core/: bridge_execution_engine.py
src/config/: boot_verification_suite.py  manifest.json  museum_history_matrix.py
src/control_core/: EdwardsAegisNode.cs  aegis_ingestion_node.py  anchor_interlock_subroutine.py  antigravity_aegis_bridge.py  asymmetric_roll_stabilizer.py  athena_bridge_node.py  bridge_execution_engine.py  central_warning_registry.py  cognitive_ring_processor.py  csf_aegis_bridge.py  csf_isolation_valve.py  jammer_targeting_system.py  sonar_target_motion_analysis.py
src/drivers/telemechanical/: BradleyExchangeMapper.hpp  TeletankDefinitiveMapping.hpp  TeletankMapping.hpp  TeletankTelemetryBridge.cpp  UnivacSensorEncoder.cpp  UniversalTeletankBridgeServer.cpp
src/hydrodynamics/: bank_suction_lookup.py  wave_matrix_processor.py
src/modules/light_app/: app_interface.js
src/network_layer/: actuator_serial_serializer.py  appliance_integration_bridge.py  async_typer_node.py  aviation_telemetry_bridge.py  bridge_network_interface.py  bridge_network_router.py  flag_fault_logger.py  hardware_watchdog.py  hex_spectrum_modulator.py  living_quarters_controller.py  modbus_framing_engine.py  multi_ledger_watchdog.py  nmea_serial_parser.py  rs485_failover_manager.py  rs485_retry_manager.py  serial_port_listener.py  shore_audit_logger.py  shore_weapon_serializer.py  tcp_command_listener.py  test_hardware_stress.py  test_matrix_load_latency.py  test_module_imports.py  univac_mac_aligner.py  univac_matrix_processor.py  univac_node_matrix_processor.py  weapon_serial_parser.py  weapon_serial_serializer.py
